--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,5 @@ pytest>=7.0.0
 web3>=6.0.0
 requests>=2.31.0
 elevenlabs>=0.2.0
-python-multipart>=0.0.6</content>
-<parameter name="filePath">/Users/enkay/src/dev/nsurecat-genesis001/requirements.txt
+python-multipart>=0.0.6
+# <parameter name="filePath">/Users/enkay/src/dev/nsurecat-genesis001/requirements.txt
