--- a/.gitignore
+++ b/.gitignore
@@ -134,5 +134,9 @@ dmypy.json
 
 # OS
 .DS_Store
-Thumbs.db</content>
+Thumbs.db
+
+# Application PID files
+.backend.pid
+.frontend.pid</content>
 <parameter name="filePath">/Users/enkay/src/dev/nsurecat-genesis001/.gitignore
