--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,35 @@ fastapi>=0.104.0
 uvicorn[standard]>=0.24.0
 pydantic>=2.0.0
 pytest>=7.0.0
-web3>=6.0.0
+web3==7.14.0
 requests>=2.31.0
 elevenlabs>=0.2.0
 python-multipart>=0.0.6
 playwright>=1.40.0
 pytest-playwright>=0.4.0
-circle-web3>=0.1.0
-circle-developer-controlled-wallets
-circle-web3-sdk-util
+circle-configurations==8.1.1
+circle-developer-controlled-wallets==8.1.1
+circle-web3-sdk-util==8.1.1
+
+# FastAPI and server
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+pydantic==2.5.0
+pydantic-settings==2.1.0
+
+# Circle SDK
+# circle-web3==1.0.0
+
+# OpenAI
+openai==1.3.5
+
+# Environment management
+python-dotenv==1.0.0
+
+# Database
+aiosqlite==0.19.0
+
+# Utilities
+python-multipart==0.0.6
+httpx==0.25.1
 # <parameter name="filePath">/Users/enkay/src/dev/nsurecat-genesis001/requirements.txt
